Android studio warnings.